--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=apiwarehouse
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.format_sql=true
+#CONFIGURAÇÕES DE CONEXÃO
+spring.datasource.url=jdbc:postgresql://localhost:5432/Warehouse
+spring.datasource.username=postgres
+spring.datasource.password=root
